--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "filament/filament": "^3.0",
         "illuminate/contracts": "^10.0",
+        "livewire/livewire": "^3.0",
         "spatie/laravel-package-tools": "^1.12"
     },
     "require-dev": {
