--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,15 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.0",
-        "illuminate/contracts": "^10.0",
+        "illuminate/contracts": "^10.0 || ^11.0",
         "livewire/livewire": "^3.0",
         "spatie/laravel-package-tools": "^1.12"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^7.0",
+        "nunomaduro/collision": "^7.0 || ^8.0",
         "nunomaduro/larastan": "^2.0",
-        "orchestra/testbench": "^8.0",
+        "orchestra/testbench": "^8.0 || ^9.0",
         "pestphp/pest": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0",
         "phpstan/extension-installer": "^1.1",
@@ -42,6 +42,9 @@
             "providers": [
                 "Codedor\\FilamentResourcePicker\\Providers\\FilamentResourcePickerServiceProvider"
             ]
+        },
+        "branch-alias": {
+            "dev-feature/laravel-11": "1.1.x-dev"
         }
     },
     "config": {
