--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,17 @@
     "homepage": "https://github.com/codedor/filament-resource-picker",
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "^8.2|^8.3",
         "filament/filament": "^3.0",
-        "illuminate/contracts": "^10.0 || ^11.0",
+        "illuminate/contracts": "^10.0|^11.0",
         "livewire/livewire": "^3.0",
         "spatie/laravel-package-tools": "^1.12"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^7.0 || ^8.0",
-        "nunomaduro/larastan": "^2.0",
-        "orchestra/testbench": "^8.0 || ^9.0",
+        "nunomaduro/collision": "^7.0|^8.0",
+        "larastan/larastan": "^2.0",
+        "orchestra/testbench": "^8.0|^9.0",
         "pestphp/pest": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0",
         "phpstan/extension-installer": "^1.1",
