--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "filament/filament": "^3.0",
+        "filament/filament": "^4.0",
         "illuminate/contracts": "^10.0|^11.0|^12.0",
         "livewire/livewire": "^3.0",
         "spatie/laravel-package-tools": "^1.12"
     },
     "require-dev": {
+        "filament/upgrade": "^4.0",
+        "larastan/larastan": "^2.0|^3.0",
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^7.0|^8.0",
-        "larastan/larastan": "^2.0|^3.0",
         "orchestra/testbench": "^8.0|^9.0|^10.0",
         "pestphp/pest": "^2.0|^3.0",
         "pestphp/pest-plugin-laravel": "^2.0|^3.0",
