--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "filament/filament": "^4.0",
+        "filament/filament": "^5.0",
         "illuminate/contracts": "^10.0|^11.0|^12.0",
-        "livewire/livewire": "^3.0",
+        "livewire/livewire": "^3.0|^4.0",
         "spatie/laravel-package-tools": "^1.12"
     },
     "require-dev": {
-        "filament/upgrade": "^4.0",
         "larastan/larastan": "^2.0|^3.0",
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^7.0|^8.0",
