--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": "^8.2",
         "filament/filament": "^5.0",
         "illuminate/contracts": "^10.0|^11.0|^12.0",
-        "livewire/livewire": "^3.0|^4.0",
+        "livewire/livewire": "^4.0",
         "spatie/laravel-package-tools": "^1.12"
     },
     "require-dev": {
